Changes in Version 1.2
======================

USER VISIBLE CHANGES
--------------------

* No longer using Defaults package (which is now archived on CRAN) in
  getSymbols.FI.

* remove some `:::` calls to unexported functions from quantmod.

* saveInstruments() gains a "compress" argument to allow for different 
  compression than the default ("gzip")

* instrument() and most of its wrappers gain an "overwrite" argument. The 
  default is TRUE to match previous behavior -- if you try to create an 
  instrument that already exists, the old one will be replaced by 
  the new definition.  If overwrite=FALSE is used, there will be an error
  if you try to define an instrument that has a primary_id that is already 
  in use.  Thanks to Charlie Friedemann for the suggestion and discussions.

* load.instruments() gains an overwrite argument that is passed through to the
  instrument() wrapper functions.  Therefore, load.instruments() no longer 
  checks to see if an instrument already exists.  Thanks to Charlie Friedemann
  for the patch.

* load.instruments() gains an "identifier_cols" argument that can be used to
  pass the names of columns that are to be used as identifiers instead of as
  normal instrument attributes.  Thanks to Charlie Friedemann for the patch.

* loadInstruments() can now load unnamed lists of instruments because it now
  uses the primary_ids directly instead of the names of the list/environment

BUG FIXES
---------

* setSymbolLookup.FI was appending the Symbol to the directory, and 
  getSymbols.FI was only adding the Symbol to the file path if the end of the 
  path was not the same as the Symbol.  That meant that getSymbols.FI could not
  be used to get data for a Symbol that was the same as the base directory.
  getSymbols.FI now always appends the Symbol to the file path and 
  setSymbolLookup.FI does not append it to the base_dir. Test added.

* In redenominate, if the object was a defined instrument, the currency in the